# DeepStrangeFake

./: .gitignore  .gitmodules  README.md  pyproject.toml
audit_agent/: __init__.py  agent_led_benchmark.py  agent_led_runtime.py  agents.py  benchmark.py  benchmark_acquisition.py  benchmark_evaluation.py  benchmark_models.py  benchmark_runtime.py  cli.py  config.py  decisions.py  dependency_intelligence.py  evidence.py  evidence_gate.py  graph_artifacts.py  graph_models.py  graph_policy.py  graph_replay.py  graph_scheduler.py  graph_templates.py  integration.py  intelligence.py  investigation_models.py  investigation_tools.py  llm.py  llm_accounting.py  mcp_client.py  memory.py  message_bus.py  models.py  pipeline.py  poc_repair.py  prompts.py  redaction.py  reporting.py  repository.py  repository_acquisition.py  resource_summary.py  runtime.py  (+6 more)
benchmarks/: adjudications.v1.json  agent_led_blindspots.v1.json  agent_led_real_model_repos.v1.json  corpus.v1.json  projects.json  truth.v1.json
config/: default.json
docs/: agent-led-investigation.md  benchmark-operator-guide.md  evidence.md  integration.md  project-console.md  runtime.md  safety.md  usage.md
frontend/: index.html  package-lock.json  package.json  tsconfig.typecheck.json  vite.config.ts
tests/: legacy_runtime_contract.v1.json  legacy_web_api_contract.v1.json  process_tree_worker.py  test_agent_led_benchmark.py  test_agent_led_investigation.py  test_agent_runtime_integration.py  test_ast_dataflow_evidence.py  test_audit_event_stream.py  test_benchmark_evaluation_pipeline.py  test_dataflow_engine.py  (+31 more)
(+366 files in other folders)
