[project]
name = "agentic-security-audit"
version = "0.1.0"
description = "CLI-first agentic open-source security audit and validation system."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
js-ast = [
    "tree-sitter>=0.22,<1.0",
    "tree-sitter-language-pack>=0.7,<1.0",
]

[tool.unittest]
start-directory = "tests"
